# bloqzEthNyc

./: Anchor.toml  README.md  hardhat.config.js
bloqz/: app.config.js  app.json  entrypoint 2.js  entrypoint.js  metro.config.js  package-lock.json  package.json  tsconfig.json
bloqz/app/: NotificationCenter.tsx  _layout.tsx  chat.tsx  index.tsx  settings.tsx  transaction-history.tsx  transaction-preview.tsx  user-profile.tsx  wallet-balance.tsx  wallet-contacts.tsx
bloqz/components/: AnimatedStoryCard.tsx  BuyCryptoButton.tsx  MarketMoversCard.tsx  MarketingAssetsGenerator.tsx  NotificationBadge.tsx  ReceiveModal.tsx  ReceiveShareCard.tsx  RecipientRequestCard.tsx  SenderRequestCard.tsx  StoryVideoCreator.tsx  ThemedView.tsx  TransactionPreviewModal.tsx  TransactionShareCard.tsx  TransactionShareModal.tsx  TransakWidget.tsx
bloqz/contexts/: TransakContext.tsx
bloqz/hooks/: useNotifications.ts
bloqz/navigation/: types.ts
bloqz/services/: api.service.ts  notification.service.ts  notificationPreferences.service.ts  sessionKeyManager 2.ts  sessionKeyManager.ts  wallet.service.ts
bloqz/theme/: ThemeProvider.tsx  colors.ts
bloqz/types/: navigation.ts
bloqz/utils/: backHandlerPolyfill.ts
cache/: solidity-files-cache.json
contracts/: TransferFeeCollector.sol
deployments/: all-deployments.json  arbitrum-42161.json  arbitrum-env.txt  base-8453.json  base-env.txt  optimism-10.json  optimism-env.txt  polygon-137.json  polygon-env.txt
programs/transfer-fee-collector/: Cargo.toml
programs/transfer-fee-collector/src/: lib.rs
(+4 files in other folders)
