[package]
name = "transfer_fee_collector"
version = "0.1.0"
description = "Solana program for transfer fee collection"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_fee_collector"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0" 